# py-fiq-curso-2023

./: LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
